get rid of border bottom for h3 trip summary. change the size for icons and trip summary text to 15% and 85%. add overflow hidden to icons and summaryinfo to fix the alignment. add margin-bottom 1rem to summaryinfo.

--- a/_work/css/main.css
+++ b/_work/css/main.css
@@ -922,7 +922,6 @@ div.fixed div.floatingBox > p
 h3.tripsummary
 {
 	padding-bottom: 1rem;
-	border-bottom: 2px solid #e3e3e3;
 }
 
 .tripSummaryLabel
@@ -935,13 +934,16 @@ h3.tripsummary
 
 figure.summaryicon
 {
-	width: 20%;
+	width: 15%;
 	display: inline-block;
 	float: left;
+	overflow: hidden;
 }
 
 .summaryinfo
 {
-	width: 80%;
+	width: 85%;
 	display: inline-block;
+	overflow: hidden;
+	margin-bottom: 1rem;
 }
